# mogs_joystick

./: .gitignore  .travis.yml  CMakeLists.txt  MoGS_Joystick.pc.in  MoGS_JoystickConfig.cmake.in  README.md  config_Joystick.h.in  install_packages_ubuntu.sh
apps/: CMakeLists.txt
apps/config_joystick/: CMakeLists.txt  Config_pad.cpp
apps/joystickmapper/: CMakeLists.txt  main.cpp
apps/joystickmapper/resources/: joystickmapper.qrc.in
apps/joystickmapper/src/: ActionConfigurationView.cpp  ActionConfigurationView.h  ActionConfigurationView.ui  AxisRangeDelegate.cpp  AxisRangeDelegate.h  ButtonPressedDelegate.cpp  JoystickActionDelegate.cpp  JoystickActionDelegate.h  JoystickConfigurationModel.cpp  JoystickConfigurationModel.h  JoystickMapper.cpp  JoystickMapper.h  JoystickMapper.ui  JoystickSelector.cpp  JoystickSelector.h  JoystickSelector.ui  JoystickVisualizer.cpp  JoystickWrapper.cpp  JoystickWrapper.h
apps/joystickmapper/src/delegate/: AxisRangeDelegate.cpp  AxisRangeDelegate.h  ButtonPressedDelegate.cpp  ButtonPressedDelegate.h  JoystickActionDelegate.cpp  JoystickActionDelegate.h
apps/joystickmapper/src/view/: ActionConfigurationView.cpp  ActionConfigurationView.h  ActionConfigurationView.ui  JoystickVisualizer.cpp  JoystickVisualizer.h  JoystickVisualizer.ui
data/DTD/: mogs_joystick.dtd
include/: Generic_Joystick.h  GreenAsian_Sanwa_pad.h  HORI_PAD_3_TURBO.h  Joystick.h  Mega_World_USB_2_Axis_8_Button_Gamepad.h  MoGS_Config_Joystick.h  MoGS_Joystick.h  XBox_pad.h  joystick.h
src/: Config_pad.cpp  Generic_Joystick.cpp  GreenAsian_Sanwa_pad.cpp  HORI_PAD_3_TURBO.cpp  Joystick.cpp  Mega_World_USB_2_Axis_8_Button_Gamepad.cpp  MoGS_Config_Joystick.cpp  MoGS_Joystick.cpp  XBox_pad.cpp  joystick.cpp
test/: CMakeLists.txt  test_MoGS_pad.cpp  test_generic.cpp  test_pad.cpp
